--- a/backend/aprofundamento-typescript/package.json
+++ b/backend/aprofundamento-typescript/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc && node ./build/index.js",
-    "exercicio1": "tsc && node ./build/exercicio1.js",
-    "exercicio2": "tsc && node ./build/exercicio2.js"
+    "exercicio1": "clear && tsc && node ./build/exercicio1.js",
+    "exercicio2": "clear && tsc && node ./build/exercicio2.js",
+    "exercicio3": "clear && tsc && node ./build/exercicio3.js"
 
   },
   "keywords": [],
