--- a/backend/aprofundamento-typescript/package.json
+++ b/backend/aprofundamento-typescript/package.json
@@ -7,7 +7,10 @@
     "start": "tsc && node ./build/index.js",
     "exercicio1": "clear && tsc && node ./build/exercicio1.js",
     "exercicio2": "clear && tsc && node ./build/exercicio2.js",
-    "exercicio3": "clear && tsc && node ./build/exercicio3.js"
+    "exercicio3": "clear && tsc && node ./build/exercicio3.js",
+    "exercicio4": "clear && tsc && node ./build/exercicio4.js",
+    "exercicio5": "clear && tsc && node ./build/exercicio5.js"
+   
 
   },
   "keywords": [],
