--- a/backend/aprofundamento-typescript/package.json
+++ b/backend/aprofundamento-typescript/package.json
@@ -9,9 +9,8 @@
     "exercicio2": "clear && tsc && node ./build/exercicio2.js",
     "exercicio3": "clear && tsc && node ./build/exercicio3.js",
     "exercicio4": "clear && tsc && node ./build/exercicio4.js",
-    "exercicio5": "clear && tsc && node ./build/exercicio5.js"
-   
-
+    "exercicio5": "clear && tsc && node ./build/exercicio5.js",
+    "exercicio6": "clear && tsc && node ./build/exercicio6.js"
   },
   "keywords": [],
   "author": "",
